# rust-jwt-simple

./: Cargo.toml  README.md  rustfmt.toml
src/: claims.rs  common.rs  error.rs  jwks.rs  lib.rs  rsa.rs  serde_additions.rs  token.rs
src/algorithms/: eddsa.rs  es256.rs  es256k.rs  hmac.rs  rsa.rs
