[package]
name = "dq-jwt-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.7.2"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
ct-codecs = "1.1.1"
anyhow = "1.0.71"
hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
rand = "0.8.5"
thiserror = "1.0.43"
